Many contentTypes, a page and a part

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
-rootProjectName=starter-app-es2015
+rootProjectName=worship
 
 # jar filename
-projectName=worship
+projectName=app-worship
 
 # application runtime identifier
 appName=org.comlock.app.worship
 
-appDisplayName=Starter Ecmascript (Change me in gradle.properties)
+appDisplayName=Worship
 
 xpVersion=7.7.2
 version=1.0.0-SNAPSHOT
