--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "author": "Christian Andreas Westgaard <comlock@gmail.com>",
-  "dependencies": {},
+  "dependencies": {
+    "render-js": "^1.29.0"
+  },
   "devDependencies": {
     "@babel/core": "7.15.0",
     "@babel/plugin-proposal-class-properties": "7.14.5",
@@ -40,8 +42,8 @@
     "postcss-loader": "6.1.1",
     "postcss-preset-env": "6.7.0",
     "sass-loader": "12.1.0",
-    "set-value": "4.0.0",
     "serialize-javascript": "6.0.0",
+    "set-value": "4.0.0",
     "stylus": "0.54.8",
     "stylus-loader": "6.1.0",
     "svg-url-loader": "7.1.1",
